--- a/manifest.json
+++ b/manifest.json
@@ -18,11 +18,15 @@
 	},
 	"content_scripts": [
 		{
-			"matches": ["*://www.amazon.com/*", "*://www.amazon.jp/*"],
+			"matches": ["*://www.amazon.com/*", "*://www.amazon.co.jp/*"],
 			"js": ["js/changePageBkgdColor.js"]
 		},
 		{
-			"matches": ["*://www.amazon.com/s/*", "*://www.amazon.jp/s/*"],
+			"matches": ["*://www.amazon.com/s/*"],
+			"js": ["js/utils.js","js/showRMBschRsltPage.js"]
+		},
+		{
+			"matches": [ "*://www.amazon.co.jp/s/*"],
 			"js": ["js/utils.js","js/showRMBschRsltPage.js"]
 		}
 	],
