--- a/manifest.json
+++ b/manifest.json
@@ -22,15 +22,10 @@
 			"js": ["js/changePageBkgdColor.js"]
 		},
 		{
-			"matches": ["*://www.amazon.com/s/*"],
-			"js": ["js/jquery-3.1.1.min.js","js/utils.js","js/showRMBschRsltPage.js"]
-		},
-		{
-			"matches": [ "*://www.amazon.co.jp/s/*"],
-			"js": ["js/utils.js","js/showRMBschRsltPage.js"]
-		},
-		{
-			"matches": [ "*://www.amazon.co.uk/s/*"],
+			"matches": ["*://www.amazon.com/s/*","*://www.amazon.com/gp/search/*",
+						"*://www.amazon.co.jp/s/*","*://www.amazon.co.jp/gp/search/*",
+						"*://www.amazon.co.uk/s/*","*://www.amazon.co.uk/gp/search/*",
+						"*://www.amazon.de/s/*","*://www.amazon.de/gp/search/*"],
 			"js": ["js/utils.js","js/showRMBschRsltPage.js"]
 		}
 	],
